[package]
name = "mountercli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "mounter"
path = "src/main.rs"

[dependencies]
mounterlib = { path = "../mounterlib", default-features = false }
mainlib = { path = "../mainlib" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[features]
default = [
    "download-http", 
    "download-local", 
    "execution-local-pe", 
    "execution-process-hollowing"]

# Download methods
download-http = ["mounterlib/download-http"]
download-local = ["mounterlib/download-local"]

# Execution methods
execution-local-pe = ["mounterlib/execution-local-pe"]
execution-process-hollowing = ["mounterlib/execution-process-hollowing"]
execution-thread-hijack = ["mounterlib/execution-thread-hijack"]
